# openvm

./: .gitignore  CNAME  Cargo.toml  Gemfile  RENDERING.md  _config.yml  config.toml  index.md
_posts/: 2024-08-05-welcome-to-jekyll.markdown
axiom-vm/: Cargo.toml
axvm-sdk/: Cargo.toml
benchmark/: Cargo.toml
benchmarks/: Cargo.toml  alu256_e2e.md  base64_json.md  ecrecover-0651a0f4ba0923fcef3fc5a741c78a28cab4a945.md  ecrecover-074cb838cc7d0b156b4179380e26e9c3de4196ec.md  ecrecover-0ea118f4860f2f587a64a70664e9510553feb2ac.md  ecrecover-137e42df8c32c3b0aac785da5d928882957357cc.md  ecrecover-1885566a7fa8318e80ce260fda53a039d5531502.md  ecrecover-1ea0ef3ec4be7a2eaa4a6894ac35b4bdfccf1106.md  ecrecover-226b3536dca3699344d53e260cf7d3ca22a8e4b9.md  ecrecover-2b2836443d8d329080bf8221c4b5ce3efbcf555a.md  ecrecover-2c322b49b8039a8f8a4fcdd6f1e01b7712f25c27.md  ecrecover-31411df07504064d106e7fd77ece557f5aa11fc9.md  ecrecover-3735d974d730da8c71a5a62390fef2fe7e05e58b.md  ecrecover-37b4f3b1df34549bc8d865be715fc07529f5c935.md  ecrecover-3a1d8ec837e6a7f25093817d37e9037586f0bcfc.md  ecrecover-3b60c66ab5f9d33b9d09ed6f9c566b5f2e572d23.md  ecrecover-3b72c7992ad93823a4675da77b69cf4189751e9d.md  ecrecover-3fe3dc581c029d3ac18f740d154f0c8bd052ab72.md  ecrecover-466236a81fd1a54f01b30ff14f689a35e01401ba.md  ecrecover-4a9d7db877831c8b35146a0cd142e862543ebe50.md  ecrecover-4d180095d3cc976d5d2b79c756909c6b475f2b32.md  ecrecover-4ec47bce55b02d42cd5ee1c3b9344a71390ac8ff.md  ecrecover-501e965496b2d95efdab1995a48d550c945644a7.md  ecrecover-55d7015d8ba49010c70c96cdd8746df2955a158c.md  ecrecover-5d7c7fc880dd5ec7ce1477b05e88b85b29230d65.md  ecrecover-66a8134a515c9f699d572e7f681311a04df3aef8.md  ecrecover-6cc6f98e748878e62836df29733680a26202dc82.md  (+183 more)
book/: 404.html  chapter_1.html  (+1 more)
crates/toolchain/edsl-deserialize/: Cargo.toml
crates/toolchain/edsl-deserialize/src/: castf_extension.rs  config.rs  deserialize_instruction.rs  lib.rs
crates/toolchain/edsl-kernel/: Cargo.toml
crates/toolchain/edsl-kernel/src/: execute.rs  generate_edsl.rs  lib.rs  main.rs  parse_compiler_output.rs  parse_kernel.rs  transportation.rs
ecc/execution/: Cargo.toml
ecc/execution/src/: lib.rs
ecc/execution/src/common/: field.rs  mod.rs
ecc/execution/src/curves/: bls12_381.rs  bn254.rs  mod.rs  utils.rs
ecc/execution/src/curves/bls12_381/: field.rs  final_exp.rs  line.rs  miller_loop.rs  mod.rs  utils.rs
ecc/execution/src/curves/bls12_381/tests/: test_line.rs  test_miller_loop.rs
ecc/execution/src/curves/bn254/tests/: test_line.rs  test_miller_loop.rs
ecc/execution/src/ec_point/: mod.rs
ecc/execution/src/miller/: algorithm.rs  exponentiation.rs  final_exp.rs  miller_loop.rs  miller_steps.rs  mod.rs  step.rs  tests.rs  utils.rs
ecc/execution/src/miller/tests/: mod.rs  test_bls12_381.rs  test_bn254.rs
ecc/execution/src/operations/: extension_field.rs  line.rs  mod.rs  tests.rs  utils.rs
ecc/execution/src/operations/tests/: mod.rs  test_bls12_381.rs  test_bn254.rs
wasm/: Cargo.toml  README.md  fibonacci-elf
wasm/src/: lib.rs
wasm/www/: index.js  package-lock.json  package.json  webpack.config.js
(+3541 files in other folders)
