[package]
name = "wasm-test"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
axvm-transpiler = { workspace = true }
axvm-circuit = { workspace = true }
ax-stark-sdk.workspace = true
eyre.workspace = true
# https://docs.rs/getrandom/latest/getrandom/index.html#webassembly-support
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.72", features = ["console"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

# needs to be workspace root
# [profile.release]
# # Tell `rustc` to optimize for small code size.
# opt-level = "s"
