[package]
name = "openvm-edsl-kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
openvm-instructions = { workspace = true }
openvm-native-compiler = { workspace = true }
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
openvm-stark-backend = { workspace = true }

[dev-dependencies]
strum.workspace = true
strum_macros.workspace = true
openvm-instructions.workspace = true
